css/main.css
/* Fonts import */
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap");
::-webkit-scrollbar {
  display: none;
}

* {
  scroll-behavior: smooth;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  outline: 0;
}

body {
  transition: all 0.5s;
}

.scroll-indicator {
  background-color: #fff;
  width: 100vw;
  height: 5px;
  position: fixed;
  top: 0;
}

.scroll-indicator .scroll-progress {
  height: 100%;
  width: 0;
  background-color: #fe5831;
}

.headeroverlay {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
}

.headeroverlay .toplinks {
  user-select: none;
  position: absolute;
  bottom: 5vh;
  padding: 20px 0;
  cursor: pointer;
  text-shadow: 0 1px 1px #023e8a;
}

.headeroverlay .toplinks a {
  margin: 0 10px;
  text-decoration: none;
  color: #03045e;
  font-size: 30px;
}

.headeroverlay .toplinks a:hover {
  border-bottom: 3px solid #023e8a;
}

.header {
  overflow: hidden;
  height: 100vh;
  width: 100vw;
  position: fixed;
  top: 0;
  bottom: 0;
  z-index: -100;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
}

.header .intro {
  font-family: 'Comfortaa', cursive;
  padding: 30px;
  width: 80vw;
  max-width: 800px;
  height: 50vh;
  box-shadow: 10px 10px 1px #0077b6;
  background-color: rgba(202, 240, 248, 0.94);
}

.header .intro h1 {
  font-size: 50px;
}

.header .intro h1 span {
  font-weight: 900;
}

.header .intro .typing {
  margin: 100px 0;
  font-size: 20px;
}

.header .fa-angle-down {
  font-size: 50px;
  position: absolute;
  bottom: 0;
  color: #0077b6;
  opacity: 0;
}

.header .down-animation {
  transform: translate(0, 5vh);
  transition: transform 1s ease-in-out;
}

.topbg {
  width: 100vw;
  height: 100vh;
  z-index: -200;
  position: absolute;
  top: 0;
}

.topbg .bottom-left {
  width: 50vw;
  height: 120vw;
  background-color: #023e8a;
  transform: rotate(-45deg) translate(-15vh);
  position: relative;
  bottom: -50vh;
  box-shadow: 0 10px 10px #000;
}

.topbg .triangle {
  width: 70vw;
  height: 70vw;
  background-color: #90e0ef;
  transform: rotate(-45deg);
  position: relative;
  bottom: 270vh;
  right: -180vh;
  border-radius: 50%;
  box-shadow: -5px 10px 20px #000;
}

.topbg .left-cover {
  width: 70vw;
  height: 70vw;
  transform: rotate(45deg);
  background-color: #00b4d8;
  position: relative;
  bottom: 1200px;
  box-shadow: 2px 0px 16px #000;
}

.topbg .right-top {
  width: 30vw;
  height: 30vw;
  transform: rotate(60deg);
  background-color: #023e8a;
  position: fixed;
  bottom: 450px;
  right: -100px;
  box-shadow: 6px 2px 20px #000;
}

.topbg .left-top {
  width: 30vw;
  height: 30vw;
  transform: rotate(75deg);
  background-color: #0096c7;
  position: relative;
  bottom: 4200px;
  right: 25vh;
  border-radius: 50%;
  box-shadow: 2px 0px 10px #000;
}

.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
  background-color: rgba(0, 119, 182, 0);
  padding: 50px 0;
  color: #fff;
}

.about h2 {
  text-align: center;
  font-size: 50px;
  padding: 8px;
  text-shadow: 0 1px 5px #000;
}

.about .aboutunderline {
  box-shadow: 0 1px 5px #000;
  background-color: #fff;
  width: 50vw;
  height: 3px;
  margin-top: -10px;
  margin-bottom: 20px;
}

.about .about-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
  flex-wrap: wrap;
  margin: 10px;
  width: 98vw;
  font-size: 25px;
}

.about .about-container p {
  box-shadow: 0 2px 5px #000;
  line-height: 130%;
  font-family: 'Comfortaa', cursive;
  font-weight: 500;
  background-color: rgba(0, 37, 54, 0.9);
  padding: 25px;
  width: 51%;
}

.about .about-container p button {
  box-shadow: 0 1px 1px #000;
  margin-top: 20px;
  border: 0;
  padding: 8px 12px;
  font-size: 25px;
  background-color: rgba(254, 88, 49, 0.99);
}

.about .about-container p button a {
  text-decoration: none;
  color: #fff;
}

.about .about-container p button a span {
  position: relative;
  transition: 0.5s;
}

.about .about-container p button a span::after {
  font-size: 150%;
  transform: rotate(90deg);
  content: '\00bb';
  position: absolute;
  top: 0;
  right: -20px;
  transition: 0.5s;
  opacity: 0;
  padding-right: 10px;
}

.about .about-container p button a:hover span {
  padding-right: 25px;
}

.about .about-container p button a:hover span::after {
  opacity: 1;
  right: -10px;
}

.about .about-container img {
  margin: 25px;
  height: 50vh;
  background-color: #000;
  box-shadow: 0 1px 20px #000;
}

.about .about-container .hey {
  font-size: 120%;
}

.about-decor {
  overflow: hidden;
  position: absolute;
  top: 100vh;
  left: 0;
  width: 100vw;
  height: 300%;
  z-index: -1;
  background-color: #0077b6;
}

.about-decor .line1 {
  background-color: #fe5831;
  background-color: #caf0f8;
  width: 150vw;
  height: 10px;
  transform: rotate(45deg);
  position: relative;
  bottom: -200px;
  left: 100px;
  box-shadow: 0 0.5px 4px #444;
}

.about-decor .line2 {
  background-color: #023e8a;
  width: 150vw;
  height: 7px;
  transform: rotate(45deg);
  position: relative;
  bottom: -50px;
  left: 80px;
  box-shadow: 0 0.5px 4px #444;
}

.about-decor .line3 {
  background-color: #fe5831;
  width: 150vw;
  height: 5px;
  transform: rotate(45deg);
  position: relative;
  bottom: 100px;
  left: 80px;
  box-shadow: 0 0.5px 4px #444;
}

.about-decor .line4 {
  background-color: #fe5831;
  width: 150vw;
  height: 5px;
  transform: rotate(45deg);
  position: relative;
  bottom: -1500px;
  left: 80px;
  box-shadow: 0 0.5px 4px #444;
}
/* ... */

